package com.example.orderprocessing.strategies.delivery;

public interface DeliveryStrategy {
    void deliver(String addressOrPostalOffice);
}
