package com.example.orderprocessing.strategies.payment;

public interface PaymentStrategy {
    void pay();
}
